--- a/public/index.html
+++ b/public/index.html
@@ -504,22 +504,20 @@
     
     <div class="grid gap-10 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
 
+      <!-- Dev Team Section -->
+<section id="devs" class="py-16 px-4 creeper-bg">
+  <div class="container mx-auto text-center">
+    <h2 class="minecraft-font text-3xl text-amber-800 mb-8">MEET THE DEV 🛠️</h2>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+
       <!-- Dev Card -->
-      <div class="bg-white p-6 rounded-2xl shadow-lg border-4 border-gray-200 minecraft-inventory hover:scale-105 transition-transform duration-300 ease-in-out">
-        <h3 class="minecraft-font text-2xl text-emerald-800 mb-1">ChickenWithACrown</h3>
-        <p class="text-sm text-gray-700 font-mono italic mb-2">Lead Developer</p>
-        <p class="text-xs text-gray-600 font-mono mb-4">
-          Handles backend, server setup, feature implementation, and much more.
-        </p>
-        <div class="flex justify-center gap-4">
-          <a href="https://www.youtube.com/@ChickenWithACrown" target="_blank"
-             class="btn-minecraft minecraft-font text-xs px-4 py-2 bg-yellow-300 hover:bg-yellow-400 rounded shadow">
-            YouTube
-          </a>
-          <a href="https://cash.app/$DanielUpperman06" target="_blank"
-             class="minecraft-font text-xs px-4 py-2 bg-gray-800 text-white hover:bg-gray-900 rounded shadow">
-            CashApp
-          </a>
+      <div class="minecraft-inventory p-4 rounded-lg bg-white shadow-md">
+        <h3 class="minecraft-font text-xl text-amber-800 mb-2">ChickenWithACrown</h3>
+        <p class="text-sm text-gray-700 font-mono mb-2">Lead Developer</p>
+        <p class="text-xs text-gray-600 font-mono mb-3">Handles backend, server setup, and features and more</p>
+        <div class="flex justify-center space-x-4 text-sm">
+          <a href="https://www.youtube.com/@ChickenWithACrown" target="_blank" class="btn-minecraft px-4 py-1 minecraft-font text-xs">YouTube</a>
+          <a href="https://cash.app/$DanielUpperman06" target="_blank" class="stone-block px-4 py-1 text-white minecraft-font text-xs">CashApp</a>
         </div>
       </div>
 
