--- a/public/index.html
+++ b/public/index.html
@@ -213,6 +213,7 @@
                 <span id="user-info" class="minecraft-font text-xs text-amber-900 hidden"></span>
                 <button id="logout-btn" class="btn-minecraft px-4 py-2 minecraft-font text-xs hidden">LOGOUT</button>
                 <button id="theme-toggle">🌙 Dark Mode</button>
+                <button onclick="window.open('https://store.honeypixelmc.com', '_blank')">🛍️ Visit Shop</button>
             </div>
         </div>
        
