--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,26 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=AWhTexu2paInr5MSskUleb9RBE5rbSP3Rbwdcbxm8feY6XmT7dcSlowYD-wuny6WmNPIlz3MiXvgfOPn&currency=USD"></script>
-    <style>
-    .minecraft-font {
-        font-family: 'Press Start 2P', cursive;
-    }
+   <!--- SEO --->
+    <meta name="description" content="HoneyPixelMC - Cozy Minecraft survival with economy, events, and community.">
+    <meta name="keywords" content="Minecraft, server, survival, economy, lifesteal, HoneyPixelMC">
+    <meta name="author" content="ChickenWithACrown">
+    <meta property="og:title" content="HoneyPixelMC - Blocky Adventures Await">
+    <meta property="og:description" content="Join our friendly Minecraft server with survival, shops, and minigames.">
+    <meta property="og:image" content="https://honeypixelmc.com/logo.png">
+    <meta property="og:url" content="https://honeypixelmc.com">
+    <meta name="theme-color" content="#facc15">
 
+    <style>
+    body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.minecraft-font {
+    font-family: 'Press Start 2P', cursive;
+}
     .pixel-border {
         border: 4px solid;
         border-image: url("data:image/svg+xml,%3csvg width='100' height='100' xmlns='http://www.w3.org/2000/svg'%3e%3cdefs%3e%3cpattern id='a' patternUnits='userSpaceOnUse' width='10' height='10'%3e%3cpath d='M0 0h5v5H0zm5 5h5v5H5z' fill='%23000'/%3e%3c/pattern%3e%3c/defs%3e%3cpath fill='url(%23a)' d='M0 0h100v100H0z'/%3e%3c/svg%3e") 4;
@@ -185,6 +200,30 @@
         max-width: 90%;
         height: auto;
     }
+            @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      20%, 60% { transform: translateX(-5px); }
+      40%, 80% { transform: translateX(5px); }
+    }
+    .animate-shake {
+      animation: shake 0.4s ease;
+    }
+[data-theme="dark"] .minecraft-inventory {
+  background-color: #1e1e1e !important;
+  color: #f0f0f0 !important;
+}
+[data-theme="dark"] .bg-white {
+  background-color: #2c2c2c !important;
+}
+[data-theme="dark"] .text-gray-800 {
+  color: #ddd !important;
+}
+[data-theme="dark"] .btn-minecraft {
+  background: linear-gradient(to bottom, #3d3d3d 0%, #2c2c2c 100%);
+  color: #fff;
+  border-color: #000;
+}
+
 </style>
 
 </head>
@@ -198,12 +237,16 @@
                 </div>
                 <h1 class="minecraft-font text-2xl text-amber-900">HoneyPixelMC</h1>
             </div>
-            <nav class="hidden md:flex space-x-1">
-                <a href="#home" class="btn-minecraft px-4 py-2 minecraft-font text-xs">HOME</a>
-                <a href="#features" class="btn-minecraft px-4 py-2 minecraft-font text-xs">FEATURES</a>
-                <a href="#events" class="btn-minecraft px-4 py-2 minecraft-font text-xs">EVENTS</a>
-                <a href="#donate" class="btn-minecraft px-4 py-2 minecraft-font text-xs">DONATE</a>
+                <!-- Toggle for mobile menu -->
+                    <button id="mobileMenuToggle" class="md:hidden btn-minecraft px-3 py-2 minecraft-font text-xs">☰ MENU</button>
+                <!-- Nav Menu -->
+            <nav id="navMenu" class="hidden md:flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-1 mt-4 md:mt-0">
+             <a href="#home" class="btn-minecraft px-4 py-2 minecraft-font text-xs">HOME</a>
+            <a href="#features" class="btn-minecraft px-4 py-2 minecraft-font text-xs">FEATURES</a>
+            <a href="#events" class="btn-minecraft px-4 py-2 minecraft-font text-xs">EVENTS</a>
+            <a href="#donate" class="btn-minecraft px-4 py-2 minecraft-font text-xs">DONATE</a>
             </nav>
+
             <a href="https://discord.gg/YU25e7Mn9b" class="btn-minecraft px-4 py-2 minecraft-font text-xs">
                 JOIN DISCORD
             </a>
@@ -700,7 +743,10 @@
                     authModal.classList.add('hidden');
                     authForm.reset();
                 } catch (err) {
-                    authError.textContent = err.message.replace('Firebase:', '');
+                authError.textContent = err.message.replace('Firebase:', '');
+                authError.classList.add("text-red-600", "font-bold");
+                authForm.classList.add("animate-shake");
+                setTimeout(() => authForm.classList.remove("animate-shake"), 500);
                 }
             };
 
@@ -718,7 +764,10 @@
                     authModal.classList.add('hidden');
                     authForm.reset();
                 } catch (err) {
-                    authError.textContent = err.message.replace('Firebase:', '');
+                authError.textContent = err.message.replace('Firebase:', '');
+                authError.classList.add("text-red-600", "font-bold");
+                authForm.classList.add("animate-shake");
+                setTimeout(() => authForm.classList.remove("animate-shake"), 500);
                 }
             };
 
@@ -941,8 +990,14 @@
                     setTimeout(() => {
                         this.style.transform = 'translateY(-2px)';
                     }, 100);
+                    
+                document.getElementById('mobileMenuToggle').onclick = () => {
+                    const menu = document.getElementById('navMenu');
+                    menu.classList.toggle('hidden');
+                    };
                 });
             });
+        
     </script>
 </body>
 </html>
