--- a/public/index.html
+++ b/public/index.html
@@ -505,21 +505,15 @@
                     <div class="minecraft-font text-2xl" id="onlineStatus">Loading...</div>
                     <div class="text-xs text-gray-700">STATUS</div>
                 </div>
-
+                <iframe 
+                    src="https://minecraft-server-status-widget.netlify.app/widget.html?ip=play.honeypixelmc.com" 
+                    width="100%" 
+                    height="100" 
+                    frameborder="0">
+                </iframe>
             </div>
         </div>
     </section>
-    <!-- Privacy Modal -->
-    <div id="privacyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-        <div class="bg-white rounded-lg max-w-lg w-11/12 p-6 relative">
-            <button onclick="closeModal('privacyModal')" class="absolute top-2 right-2 text-gray-600 hover:text-gray-900 font-bold text-xl">&times;</button>
-            <h2 class="minecraft-font text-2xl mb-4 text-amber-900">Privacy Policy</h2>
-            <p class="text-gray-800 font-mono text-sm">
-                Your privacy is important to us. We do not share your data with third parties.
-                <!-- Add your privacy details here -->
-            </p>
-        </div>
-    </div>
 
     <!-- Contact Modal -->
     <div id="contactModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
