--- a/public/index.html
+++ b/public/index.html
@@ -513,19 +513,26 @@ form,
 
     <!-- Donation Section -->
     <section id="donate" class="py-16 px-4 creeper-bg">
-        <div class="container mx-auto text-center">
-            <h2 class="minecraft-font text-3xl mb-6 text-green-800">SUPPORT THE SERVER</h2>
-            <p class="text-lg mb-10 max-w-xl mx-auto text-gray-700 font-mono">
-                &gt; Help us keep HoneyPixelMC alive and thriving.<br />
-                &gt; Every dollar supports server costs, events, and future features.<br />
-                &gt; No pay-to-win, just pure love for the community! 🐝💚
-            </p>
-            <button class="btn-minecraft px-8 py-3 minecraft-font text-lg"
-                    onclick="initiateDonation()">
-                DONATE NOW
-            </button>
-        </div>
+      <div class="container mx-auto text-center">
+        <h2 class="minecraft-font text-3xl mb-6 text-green-800">SUPPORT THE SERVER</h2>
+        <p class="text-lg mb-10 max-w-xl mx-auto text-gray-700 font-mono">
+          &gt; Help us keep HoneyPixelMC alive and thriving.<br />
+          &gt; Every dollar supports server costs, events, and future features.<br />
+          &gt; No pay-to-win, just pure love for the community! 🐝💚
+        </p>
+    
+        <form id="donation-form" class="max-w-md mx-auto text-left font-mono space-y-4">
+          <input type="text" id="donor-discord" placeholder="Discord Username" class="w-full p-2 border rounded" required />
+          <input type="number" step="0.01" id="donor-amount" placeholder="Amount (USD)" class="w-full p-2 border rounded" required />
+          <input type="text" id="donor-message" placeholder="Message (Optional)" class="w-full p-2 border rounded" />
+          <button type="submit" class="btn-minecraft w-full py-3 text-lg">Donate</button>
+          <div id="donation-error" class="text-red-600 text-sm mt-2 hidden"></div>
+        </form>
+    
+        <div id="donation-success" class="text-green-700 font-bold mt-6 hidden">🎉 Thank you for your support!</div>
+      </div>
     </section>
+
 
     <!-- Contact Modal -->
     <div id="contactModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
@@ -802,7 +809,14 @@ auth.onAuthStateChanged(async user => {
         loginBtn.classList.add('hidden');
         logoutBtn.classList.remove('hidden');
         userInfo.classList.remove('hidden');
-        userInfo.textContent = user.displayName || user.email;
+        userInfo.innerHTML = `
+          <span id="masked-identity">[Hidden]</span>
+          <button id="toggle-identity" title="Show email" class="text-sm ml-2">👁</button>
+        `;
+        document.getElementById("toggle-identity").onclick = () => {
+          const span = document.getElementById("masked-identity");
+          span.textContent = span.textContent === "[Hidden]" ? (user.displayName || user.email) : "[Hidden]";
+        };
 
         let role = "member";
         try {
@@ -828,6 +842,54 @@ auth.onAuthStateChanged(async user => {
         if (devTab) devTab.classList.add("hidden");
     }
 });
+
+// ========================
+// 💸 Donation Submission
+// ========================
+document.getElementById("donation-form").addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const discord = document.getElementById("donor-discord").value.trim();
+  const amount = document.getElementById("donor-amount").value.trim();
+  const message = document.getElementById("donor-message").value.trim();
+  const errorBox = document.getElementById("donation-error");
+  const successBox = document.getElementById("donation-success");
+
+  errorBox.classList.add("hidden");
+  successBox.classList.add("hidden");
+
+  if (!discord || !amount) {
+    errorBox.textContent = "Please fill in Discord username and amount.";
+    errorBox.classList.remove("hidden");
+    return;
+  }
+
+  let idToken = null;
+  const user = firebase.auth().currentUser;
+  if (user) {
+    idToken = await user.getIdToken();
+  }
+
+  try {
+    const response = await fetch("/donation-initiate", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ discord, amount, message, idToken }),
+    });
+    const result = await response.json();
+
+    if (result.success) {
+      successBox.classList.remove("hidden");
+      document.getElementById("donation-form").reset();
+    } else {
+      throw new Error(result.error || "Unknown error");
+    }
+  } catch (err) {
+    errorBox.textContent = err.message;
+    errorBox.classList.remove("hidden");
+  }
+});
+
 
 </script>
 
