--- a/public/index.html
+++ b/public/index.html
@@ -279,7 +279,7 @@ form,
              <a href="#home" class="btn-minecraft px-4 py-2 minecraft-font text-xs">HOME</a>
             <a href="#features" class="btn-minecraft px-4 py-2 minecraft-font text-xs">FEATURES</a>
             <a href="#events" class="btn-minecraft px-4 py-2 minecraft-font text-xs">EVENTS</a>
-            <a href="#donate" class="btn-minecraft px-4 py-2 minecraft-font text-xs">DONATE</a>
+           <a href="/donate.html" class="btn-minecraft px-4 py-2 minecraft-font text-xs">DONATE</a>
             </nav>
 
             <a href="https://discord.gg/YU25e7Mn9b" class="btn-minecraft px-4 py-2 minecraft-font text-xs">
