--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,28 @@
     <meta name="theme-color" content="#facc15">
 
 <style>
-  /* Base styles */
+  :root {
+    --bg-color: #f5f5f5;
+    --text-color: #111;
+  }
+
+  [data-theme="dark"] {
+    --bg-color: #121212;
+    --text-color: #ffffff;
+  }
+
   body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    font-family: 'Segoe UI', sans-serif;
+    transition: background-color 0.3s ease, color 0.3s ease;
     margin: 0;
-    font-family: 'Courier New', monospace;
-    background-color: #0f172a;
-    color: white;
+  }
+
+  /* Typography */
+  .minecraft-font {
+    font-family: 'Press Start 2P', cursive;
+    letter-spacing: 1px;
   }
 
   .container {
@@ -38,17 +54,7 @@
     padding: 1rem;
   }
 
-  .minecraft-font {
-    font-family: 'Press Start 2P', monospace;
-    letter-spacing: 1px;
-  }
-
-  header {
-    background-color: #1e293b;
-    padding: 1rem 0;
-    border-bottom: 3px solid #22c55e;
-  }
-
+  /* Logo */
   .logo {
     height: 60px;
     transition: transform 0.3s;
@@ -58,29 +64,72 @@
     transform: scale(1.05);
   }
 
-  nav {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-  }
-
+  /* Buttons */
   .btn-minecraft {
-    background-color: #22c55e;
+    background: linear-gradient(to bottom, #8d6e63, #5d4037);
+    border: 3px solid #3e2723;
     color: white;
+    text-shadow: 2px 2px 0px #000;
     padding: 0.6rem 1rem;
     border-radius: 0.375rem;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 0.8rem;
     cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
+    transition: all 0.2s ease;
   }
 
   .btn-minecraft:hover {
-    background-color: #16a34a;
+    background: linear-gradient(to bottom, #a1887f, #6d4c41);
+    transform: translateY(-2px);
   }
 
-  /* Guide modal */
+  .btn-minecraft:active {
+    transform: translateY(0px);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,0.3);
+  }
+
+  /* Minecraft Block Styles */
+  .minecraft-block {
+    background: linear-gradient(135deg, #8b4513 0%, #654321 50%, #4a2c17 100%);
+    border: 2px solid #2d1810;
+    box-shadow: inset 2px 2px 4px rgba(255,255,255,0.3), inset -2px -2px 4px rgba(0,0,0,0.3);
+  }
+
+  .grass-block {
+    background: linear-gradient(to bottom, #7cb342 0%, #8d6e63 20%, #8d6e63 100%);
+    border: 2px solid #4a5d23;
+  }
+
+  .stone-block {
+    background: linear-gradient(135deg, #757575, #616161 50%, #424242);
+    border: 2px solid #303030;
+  }
+
+  .gold-block {
+    background: linear-gradient(135deg, #ffd700, #ffc107 50%, #ff8f00);
+    border: 2px solid #e65100;
+    box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+  }
+
+  .diamond-block {
+    background: linear-gradient(135deg, #4fc3f7, #29b6f6 50%, #0288d1);
+    border: 2px solid #01579b;
+    box-shadow: 0 0 15px rgba(79, 195, 247, 0.6);
+  }
+
+  .emerald-block {
+    background: linear-gradient(135deg, #4caf50, #388e3c 50%, #2e7d32);
+    border: 2px solid #1b5e20;
+    box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);
+  }
+
+  /* Creeper background */
+  .creeper-bg {
+    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23388e3c' fill-opacity='0.05'%3E%3Cpath d='M8 8h8v8H8zm16 0h8v8h-8zm-8 8h8v8h-8zm0 16h8v8h-8z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+
+  /* Modals */
   .modal {
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(4px);
@@ -127,7 +176,7 @@
     display: none !important;
   }
 
-  /* Guide panel content */
+  /* Guide Panel */
   .guide-panel {
     background-color: #1e293b;
     border-radius: 0.75rem;
@@ -141,32 +190,27 @@
     color: #22c55e;
   }
 
-  /* Mobile/Tablet responsiveness */
+  /* Pixel-style borders */
+  .pixel-border {
+    border: 4px solid;
+    border-image: url("data:image/svg+xml,%3csvg width='100' height='100' xmlns='http://www.w3.org/2000/svg'%3e%3cdefs%3e%3cpattern id='a' patternUnits='userSpaceOnUse' width='10' height='10'%3e%3cpath d='M0 0h5v5H0zm5 5h5v5H5z' fill='%23000'/%3e%3c/pattern%3e%3c/defs%3e%3cpath fill='url(%23a)' d='M0 0h100v100H0z'/%3e%3c/svg%3e") 4;
+  }
+
+  /* Responsive design */
   @media (max-width: 768px) {
-    .minecraft-font {
-      font-size: 0.75rem !important;
-    }
-
-    .btn-minecraft {
-      padding: 0.5rem 0.8rem !important;
-      font-size: 0.7rem;
-    }
-
     .logo {
       width: 180px;
       height: auto;
     }
 
-    nav {
-      flex-direction: column;
-      align-items: flex-start;
+    .btn-minecraft {
+      padding: 0.5rem 0.8rem;
+      font-size: 0.7rem;
+      width: 100%;
     }
 
-    header .container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
+    header .container,
+    nav,
     #auth-section {
       flex-direction: column;
       align-items: flex-start;
@@ -181,11 +225,6 @@
   @media (max-width: 480px) {
     .logo {
       width: 150px;
-    }
-
-    .btn-minecraft {
-      width: 100%;
-      text-align: center;
     }
 
     .guide-panel {
